intel/bench_214_new/extr_.reactossdklib3rdpartylibxml2parser.c_xmlCheckLanguageID_with_main/log.txt
bench_214_new/extr_.reactossdklib3rdpartylibxml2parser.c_xmlCheckLanguageID_with_main/extr_.reactossdklib3rdpartylibxml2parser.c_xmlCheckLanguageID_with_main.c:21:20: error: expected expression
    if (cur == NULL)
                   ^
1 error generated.
HLS FPGA Parse FAILED.
